some final touches

--- a/contact.html
+++ b/contact.html
@@ -84,21 +84,21 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <!--put in your last name.-->
+                                <!-- put in your last name. -->
                                 <div class="input-field col s12">
                                     <input id="last_name" type="text" class="validate">
                                     <label for="last_name" class="black-text">Last Name</label>
                                 </div>
                             </div>
                             <div class="row">
-                                <!--put in your email address -->
+                                <!-- put in your email address -->
                                 <div class="input-field col s12">
                                     <input id="email" type="email" class="validate">
                                     <label for="email" class="black-text">Email Address</label>
                                 </div>
                             </div>
                             <div class="row">
-                                <!--type your message here.-->
+                                <!-- type your message here. -->
                                 <div class="input-field col s12">
                                     <textarea id="textarea1" class="materialize-textarea"></textarea>
                                     <label for="textarea1" class="black-text">Textarea</label>
@@ -111,8 +111,6 @@
                     </div>
                 </div>
             </div>
-            <br>
-            <br>
             <div class="row">
                 <div class="col m6 l12">
                     <div class="card z-depth-5">
@@ -138,10 +136,9 @@
 
     <footer>
 
-        <div class="footer-copyright amber lighten-1 z-depth-5">
+        <div class="footer-copyright amber lighten-1 z-depth-5 center-align">
             <div class="container">
-                © Will Michael Miller
-                <a class="white-text text-lighten-4 right" href="#!">More Links</a>
+                © Will Miller
             </div>
         </div>
 
