--- a/gallery.html
+++ b/gallery.html
@@ -228,10 +228,9 @@
     </main>
 
     <footer>
-        <div class="footer-copyright amber lighten-1">
+        <div class="footer-copyright amber lighten-1 center-align">
             <div class="container">
-                © 2014 Copyright Text
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                © Will Miller
             </div>
         </div>
     </footer>
