--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
     </main>
 
     <footer>
-        <div class="footer-copyright amber lighten-1 z-depth-5 white-text">
+        <div class="footer-copyright amber lighten-1 z-depth-5 black-text center-align">
             <div class="container">
-                © 2014 Copyright Text
-                <a class="white-text amber lighten-1 right" href="#!">More Links</a>
+                © Will Miller
             </div>
         </div>
 
